--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
 
-<div class="container">
-   <div class="col">
-    Amine
-   </div>
+<div class="container-fluid">
+    <div class="div text-center">
+        <h1>Amine</h1>
+    </div>
 </div>
 
 
