--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 </head>
 
 <body>
-
-
 <div class="container-fluid">
-    <div class="div text-center">
-        <h1>Amine</h1>
-    </div>
+    <nav class="navbar">
+    
+        <div class="div text-center">
+            <h1>Amine</h1>
+        </div>
+    
+    </nav>
 </div>
-
-
 
 
 
