plan-van-aanpak-create
.

--- a/plan-van-aanpak.html
+++ b/plan-van-aanpak.html
@@ -17,11 +17,14 @@
 <div class="container-fluid">
     <nav class="navbar">
         <div class="div text-center">
-            <h1>Amine</h1>
+            <h1>Plan van aanpak</h1>
         </div>
     </nav>
 </div>
-
+<div class="container">
+  <h2 class="display-5">Missie</h2>
+  <h2 class="display-5">Doelstelling</h2>
+</div>
 
 
 
