--- a/plan-van-aanpak.html
+++ b/plan-van-aanpak.html
@@ -23,7 +23,9 @@
 </div>
 <div class="container">
   <h2 class="display-5">Missie</h2>
+  <p class="lead">Ervoor zorgen dat ik hoger dan een 7 haal.</p>
   <h2 class="display-5">Doelstelling</h2>
+  <p class="lead">Word het geen 7 dan streef ik naar een 8.</p>
 </div>
 
 
