Plan-van-aanpak update

--- a/plan-van-aanpak.html
+++ b/plan-van-aanpak.html
@@ -28,6 +28,41 @@
   <p class="lead">Word het geen 7 dan streef ik naar een 8.</p>
 </div>
 
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Techniek</th>
+      <th scope="col">Bron</th>
+      <th scope="col">JS/HTML/CSS</th>
+      <th scope="col">Afgerond</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Entities</td>
+      <td>W3Schools</td>
+      <td>HTML</td>
+      <td>Nee</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Doctypes</td>
+      <td>W3Schools</td>
+      <td>HTML</td>
+      <td>Nee</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Animate.css</td>
+      <td>Animate.style</td>
+      <td>CSS</td>
+      <td>Nee</td>
+    </tr>
+  </tbody>
+</table>
+
 
 
 
